# python-lessons

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  RUNBOOK.md  main.py  pyproject.toml
homework_03/views/: __init__.py  ping.py  status.py  user.py
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_06/: Dockerfile  docker-compose.yaml  entrypoint.sh  gunicorn.conf.py  pyproject.toml
homework_06/nginx/: nginx.conf
homework_06/src/: app.py  config.py
homework_06/src/dao/: posts.py
homework_06/src/migrations/versions/: fec8a4504be7_initial_migration.py
homework_06/src/models/: __init__.py  database.py  post.py
homework_06/src/templates/: base.html
homework_06/src/templates/posts/: create.html  delete.html  details.html  index.html
homework_06/src/views/: posts.py
homework_07/: entrypoint.sh  pyproject.toml  uwsgi.ini
homework_07/django/settings/: settings.py  wsgi.py
homework_07/django/static/css/: base.css  sign_in.css
homework_07/django/tasks/: models.py  urls.py  views.py
homework_07/django/tasks/migrations/: 0003_alter_task_close_date.py  0006_alter_task_is_deleted.py
homework_07/django/tasks/templates/: create.html  list.html
homework_07/django/templates/: base.html  index.html
homework_07/django/user/: urls.py  views.py
homework_07/django/user/templates/: sign_in.html  sign_up.html
homework_08/: Makefile  pyproject.toml
homework_09/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
(+52 files in other folders)
