[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = ""
authors = ["Anton Lantukh <lantukh@bk.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
uwsgi = "^2.0.23"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
